--- a/src/docs/02_architecture_constraints.adoc
+++ b/src/docs/02_architecture_constraints.adoc
@@ -4,16 +4,15 @@
 
 [role="arc42help"]
 ****
-.Contents
-Any requirement that constrains software architects in their freedom of design and implementation decisions or decision about the development process. These constraints sometimes go beyond individual systems and are valid for whole organizations and companies.
-
-.Motivation
-Architects should know exactly where they are free in their design decisions and where they must adhere to constraints.
-Constraints must always be dealt with; they may be negotiable, though.
-
-.Form
-Simple tables of constraints with explanations.
-If needed you can subdivide them into
-technical constraints, organizational and political constraints and
-conventions (e.g. programming or versioning guidelines, documentation or naming conventions)
+.Table of constraints
+[width="60%",options="header"]
+|==============================================
+| Constraints          | Explication
+| Solid | The chat must be decentralized using the tecnology Solid.
+| Asciidoc     | The documentation must be done using asciidoc.
+| Arc42     | The template for documentation used is Arc42.
+| Time     | The project must be finished before 05/09/2019.
+| Money     | The project will be created with 0 cost.
+| People     | 4 programmers will work on the project.
+|==============================================
 ****
