--- a/src/docs/04_solution_strategy.adoc
+++ b/src/docs/04_solution_strategy.adoc
@@ -4,21 +4,26 @@
 
 [role="arc42help"]
 ****
-.Contents
-A short summary and explanation of the fundamental decisions and solution strategies, that shape the system's architecture. These include
 
-* technology decisions
-* decisions about the top-level decomposition of the system, e.g. usage of an architectural pattern or design pattern
-* decisions on how to achieve key quality goals
-* relevant organizational decisions, e.g. selecting a development process or delegating certain tasks to third parties.
+Because of our little experience on the architecture of sofware creation some or this early decisions may change in the future
+if better technologies are discovered.
 
-.Motivation
-These decisions form the cornerstones for your architecture. They are the basis for many other detailed decisions or implementation rules.
+* Technology decisions:
 
-.Form
-Keep the explanation of these key decisions short.
+The language selected to create de application will be javascrip. It was selected because it's good integration with solid.
+The use of solid will make a descentralized chat using pods so we assume no database will be needed. In case it's finally needed 
+we would use a sql database because of our knowelge about this model.
+Angular will be the framework that we use also because of it's good integration with solid. On the solid oficial page we have a easy tutorial
+about creation of solid apps with angular:https://solid.inrupt.com/docs/writing-solid-apps-with-angular
 
-Motivate what you have decided and why you decided that way,
-based upon your problem statement, the quality goals and key constraints.
-Refer to details in the following sections.
+* Decisions about the top-level decomposition of the system:
+
+Because of the angular framework it will be easier to implement a MVC(Model View Controller) to have a better organization o the code 
+
+* Decisions on how to achieve key quality goals:
+
+* Organizational decisions:
+
+The decisions about organization will be agile, we will have meetings every week were we will distribute the tasks.
+
 ****
