--- a/src/docs/01_introduction_and_goals.adoc
+++ b/src/docs/01_introduction_and_goals.adoc
@@ -17,7 +17,7 @@ La aplicación contendrá una vista principal de los usuarios con los que la per
 
 ****
 
-=== Quality Goals
+=== Objetivos de Calidad
 
 [role="arc42help"]
 ****
@@ -35,21 +35,7 @@ Con este proyecto aspiramos a conseguir una comunicacion privada y de punto a pu
 [role="arc42help"]
 ****
 .Contents
-Explicit overview of stakeholders of the system, i.e. all person, roles or organizations that
-
-* should know the architecture
-* have to be convinced of the architecture
-* have to work with the architecture or with code
-* need the documentation of the architecture for their work
-* have to come up with decisions about the system or its development
-
-.Motivation
-You should know all parties involved in development of the system or affected by the system.
-Otherwise, you may get nasty surprises later in the development process.
-These stakeholders determine the extent and the level of detail of your work and its results.
-
-.Form
-Table with role names, person names, and their expectations with respect to the architecture and its documentation.
+Los usuarios a los que va dirigida la aplicación "deChat" serán los expuestos a continuación en la tabla inferior. Todos los usuarios deben ser capaces de acceder a la aplicacion y tener la capacidad de comunicarse.
 |===
 |Role/Name|Contact|Expectations
 | _<Clientes>_ | _<Los usuarios de "a pié" de la aplicación>_ | _<Poder comunicarse con contactos deseados>_
