--- a/src/docs/01_introduction_and_goals.adoc
+++ b/src/docs/01_introduction_and_goals.adoc
@@ -38,9 +38,9 @@ Con este proyecto aspiramos a conseguir una comunicacion privada y de punto a pu
 Los usuarios a los que va dirigida la aplicación "deChat" serán los expuestos a continuación en la tabla inferior. Todos los usuarios deben ser capaces de acceder a la aplicacion y tener la capacidad de comunicarse.
 |===
 |Role/Name|Contact|Expectations
-| _<Clientes>_ | _<Los usuarios de "a pié" de la aplicación>_ | _<Poder comunicarse con contactos deseados>_
-| _<Profesores>_ | _<Profesores de la asignatura>_ | _<Aplicación de chat descentralizada y accesible usando SOLID>_
-| _<SOLID Staffs'>_ | _<Desarrolladores y componentes de SOLID>_ | _<Aplicacion usable, accesible y comercial que use SOLID de manera correcta>_
+| _Clientes_ | _Los usuarios de "a pié" de la aplicación_ | _Poder comunicarse con contactos deseados_
+| _Profesores_ | _Profesores de la asignatura_ | _Aplicación de chat descentralizada y accesible usando SOLID_
+| _SOLID Staffs'_ | _Desarrolladores y componentes de SOLID_ | _Aplicacion usable, accesible y comercial que use SOLID de manera correcta_
 |===
 ****
 
