--- a/src/docs/09_design_decisions.adoc
+++ b/src/docs/09_design_decisions.adoc
@@ -1,17 +1,12 @@
 [[section-design-decisions]]
 == Design Decisions
 
-
-[role="arc42help"]
-****
 === Language
 Among the following three languages:
-- Java
-- C#
-- AngujarJS (JavaScript)
+* Java
+* C#
+* AngujarJS (JavaScript)
 We have decided that the best language is JavaScript since the other two languages (Java and C #) do not have direct support of Solid and it would be us who would have to implement a controller that communicates with SOLID. However, the disadvantage of JavaScript is that we need a level that no member of the team currently has. Despite this, among all we have seen that the best option is to use JavaScript.
 
 === Database
 For the moment we will not use any database because we do not see it necessary. As the project progresses, if we see that the project requires a database, we will use a relational database such as MySQL, as we have used them in other subjects and we already have some experience with them.
-
-****
