--- a/src/docs/03_system_scope_and_context.adoc
+++ b/src/docs/03_system_scope_and_context.adoc
@@ -14,7 +14,7 @@ Our application consists of a decentralized chat in which a user can have conver
 ****
 The following diagram shows how all parts of the system communicate when chatting, that is, when one user sends a message to another:
 
-image::images/3-Business context1.PNG[Diagrama del contexto de negocio de dechat_es3b]
+image::images/3-Business context1.PNG[Business context diagram of dechat_es3b]
 
 As you can see in the diagram, each user has his own SOLID Pod, where all the messages he sends will be stored. However, sent messages will not be stored in the receiver's Pod, keeping the SOLID philosophy in which each user has full control over their data. 
 This way to see the message history of the conversation both users will have to allow the other one 
@@ -36,23 +36,13 @@ the visualization of your sent messages.
 
 [role="arc42help"]
 ****
-.Contents
-Technical interfaces (channels and transmission media) linking your system to its environment. In addition a mapping of domain specific input/output to the channels, i.e. an explanation with I/O uses which channel.
+For now the technical context of our application shows in a very general way the technologies to use, as the application is implemented will be added to the project new technologies and updating this section.
 
-.Motivation
-Many stakeholders make architectural decision based on the technical interfaces between the system and its context. Especially infrastructure or hardware designers decide these technical interfaces.
+image::images/TechnicalContext.png[Technical context diagram of dechat_es3b]
 
-.Form
-E.g. UML deployment diagram describing channels to neighboring systems,
-together with a mapping table showing the relationships between channels and input/output.
+The application consists of a device responsible for logging in or out and another that will handle the char itself, ie sending and receiving messages. The whole application itself will use a Pod server that will identify the user and save the messages sent by him.
 
 ****
-
-**<Diagram or Table>**
-
-**<optionally: Explanation of technical interfaces>**
-
-**<Mapping Input/Output to Channels>**
 
 [[section-system-scope-and-context]]
 == Alcance y Contexto del Sistema
@@ -95,7 +85,7 @@ la visualización de sus mensajes enviados.
 ****
 Por ahora el contexto técnico de nuestra aplicación muestra de una manera muy general las tecnologías a usar, según se vaya implementando la aplicación se irán agregando al proyecto nuevas tecnologías y actualizando este apartado.
 
-**DIAGRAMA**
+image::images/TechnicalContext.png[Diagrama del contexto técnico de dechat_es3b]
 
 La aplicación consta de un artefacto encargado de iniciar o cerrar sesión y otro que manejará el char en sí, es decir, el envío y recibo de mensajes. Toda la aplicación en sí utilizará un servidor de Pods con el que se identificará al usuario y se guardarán los mensajes enviados por el mismo.
 
